fixed baseline alignment on about-team page

--- a/frontEnd/src/styles.scss
+++ b/frontEnd/src/styles.scss
@@ -13,7 +13,7 @@ $warning:       #E6AA43;
 $danger:        #974027;
 $light:         #E2E3E5;
 $dark:          #3C3E3C;
-$muted:         #ACACAD;
+$muted:         #878887;
 $tertiary:      #575554;
 $light2:        #D5E7ED;
 $light3:        #9BCAD8;
